# drivers-orogen-camera_firewire

./: .project-refs  CMakeLists.txt  camera_firewire.orogen  manifest.xml  orocos_firewire_camera.orogen
scripts/: SampleRunScript.rb  camera-config.rb  camera_firewire_auto_shutter_sync.rb  camera_firewire_live.rb
tasks/: CMakeLists.txt  CameraTask.cpp  CameraTask.hpp  CameraViewerTask.cpp  CameraViewerTask.hpp
